udpates prior to push to heroku

--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
 
                     <!-- navigation menu -->
                     <li class="active"><a data-scroll href="#about">About</a></li>
-                    <li><a data-scroll href="#speakers">Speakers</a></li>              
+                    <li><a data-scroll href="#speakers">Club Leaders</a></li>              
                     <li><a data-scroll href="#schedule">Schedule</a></li>                  
                     <li><a data-scroll href="#partner">Partner</a></li>                  
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
@@ -57,11 +57,13 @@
     <header id="site-header" class="site-header valign-center"> 
         <div class="intro">
 
-            <h2>25 April, 2015 / Townhall California</h2>
+            <h2>Friday, April 1, 2016</h2>
             
-            <h1>Freelancer Conference 2015</h1>
+            <h2>Yale School of Management</h2>
             
-            <p>First &amp; Largest Conference</p>
+            <h1>Private Equity & Venture Capital Symposium</h1>
+            
+            <p>16th Annual Conference</p>
             
             <a class="btn btn-white" data-scroll href="#registration">Register Now</a>
         
@@ -73,9 +75,9 @@
             <div class="row">
                 <div class="col-sm-6">
 
-                    <h3 class="section-title">About Us</h3>
+                    <h3 class="section-title">About the Symposium</h3>
 
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand enes. We can't give you back the weekends you worked, or erase the pain ebeing forced to make the logo bigger. But if you submit your best work we ajusts might be able to give the chance to show you best digital marketing.</p>
+                    <p>The Symposium aims to further the goals of Yale School of Management's PE/VC Club. By convening top professionals from the intersection of the private equity investing space with key stakeholders we aim to provide a forum for constructive and engaging dialogue about these industries.</p>
 
                     <figure>
                         <img alt="" class="img-responsive" src="assets/images/about-us.jpg">
@@ -85,17 +87,14 @@
 
                 <div class="col-sm-6">
 
-                    <h3 class="section-title multiple-title">What is Our Goal?</h3>
+                    <h3 class="section-title multiple-title">About Yale School of Management</h3>
 
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand enes. We can't give you back the weekends you worked, or erase the pain ebeing forced to make the logo bigger. But if you submit your best work we ajusts might be able to give the chance to show you best digital marketing.</p>
+                    <p></p>
 
                     <ul class="list-arrow-right">
 
-                        <li>Learn from the best Asian Social Media Experts &amp; Case Studies</li>
-                        <li>Have dedicated 2-to-1 meetings with the experts</li>
-                        <li>Reach more consumers for less by learning new digital media skills</li>
-                        <li>Save money when spending in online advertising</li>
-                    
+                        <li><a href="http://som.yale.edu/event/2016/04/2016-private-equity-and-venture-capital-conference">View further information on Yale SOM's website.</li>
+
                     </ul>
 
                 </div><!-- /.col-sm-6 -->
@@ -127,7 +126,7 @@
                 <div class="col-sm-3">
                 
                     <i class="ion-speakerphone"></i>
-                    <h3>06<br>Speakers</h3>
+                    <h3>06<br>PE/VC Team Leadership</h3>
                 
                 </div>
             </div><!-- row -->
@@ -139,7 +138,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h3 class="section-title">Speakers</h3>
+                    <h3 class="section-title">Club Leaders</h3>
                 
                 </div>
             </div>
@@ -152,9 +151,7 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-1.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Laura Fletcher</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
@@ -173,9 +170,7 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-2.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Jared Petravicius</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
@@ -194,9 +189,7 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-3.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Lothar Rauch</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
@@ -218,9 +211,7 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-4.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Greg Muecke</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
@@ -238,9 +229,7 @@
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-5.jpg">
                         </figure>
 
-                        <h4>Jhon Smith</h4>
-
-                        <p>CEO of Peren</p>
+                        <h4>Andres Martinez</h4>
 
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
@@ -257,8 +246,9 @@
                         <figure>
                             <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-6.jpg">
                         </figure>
-                        <h4>Jhon Smith</h4>
-                        <p>CEO of Peren</p>
+                        
+                        <h4>Mu Xu</h4>
+                        
                         <ul class="social-block">
                             <li><a href=""><i class="ion-social-twitter"></i></a></li>
                             <li><a href=""><i class="ion-social-facebook"></i></a></li>
@@ -342,11 +332,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-uppercase mt0 font-400">Submit Your Contribution Work</h3>
-                    
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand awareness. We can't give you back the weekends you worked, or erase the pain of being forced to make the logo bigger. But if you submit your best work.</p>
-
-                    <a class="btn btn-white" href="#">Submit</a>
                 </div>
             </div>
         </div>
@@ -366,25 +351,25 @@
                             <time datetime="09:00">09:00 am</time> - <time datetime="22:00">10:00 am</time>
                         </div>
                         <h3>Welcome and intro</h3>
-                        <p>Mustafizur Khan, SD Asia</p>
+                        <p>Keynote Speaker</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="schedule-box">
                         <div class="time">
-                            <time datetime="10:00">10:00 am</time> - <time datetime="22:00">10:00 am</time>
+                            <time datetime="10:00">10:00 am</time> - <time datetime="22:00">4:00 pm</time>
                         </div>
-                        <h3>Tips and share</h3>
-                        <p>Mustafizur Khan, SD Asia</p>
+                        <h3>Various Panels</h3>
+                        <p>Various Panelists</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="schedule-box">
                         <div class="time">
-                            <time datetime="10:00">10:00 am</time> - <time datetime="22:00">10:00 am</time>
+                            <time datetime="10:00">4:00 pm</time> - <time datetime="22:00">5:00 pm</time>
                         </div>
-                        <h3>View from the top</h3>
-                        <p>Mustafizur Khan, SD Asia</p>
+                        <h3>Shark Tank</h3>
+                        <p>Entrepreneurs</p>
                     </div>
                 </div>
             </div>
@@ -448,8 +433,9 @@
 
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h3>Hello</h3>
-                                    <p>Lorem Ipsum</p>
+                                    <h3>Ticket Pricing</h3>
+                                    <p>Students: $75</p>
+                                    <p>Non-students: $250</p>
                                 </div>
                             </div>
                         </div>
@@ -462,19 +448,19 @@
                             </div>
 
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">Access to all the events for the day plus a continental breakfast, lunch, and cocktail reception.</div>
                             </div>
                         </div>
   
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Office address ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Event address</a>
                                 </h4>
                             </div>
 
                             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">165 Whitney Avenue, New Haven, CT 06510</div>
                             </div>
                         </div>
 
@@ -486,7 +472,7 @@
                             </div>
 
                             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">Business Formal</div>
                             </div>
                         </div>
 
@@ -498,7 +484,7 @@
                             </div>
 
                             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">Please email the club at: club-privequity@connect.yale.edu</div>
                             </div>
                         </div>
                     </div>
@@ -546,11 +532,11 @@
                         </li>
 
                         <li class="grid-item grid-item-sm-3">
-                            <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-2.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-9.jpg">
                         </li>
 
                         <li class="grid-item grid-item-sm-3">
-                            <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-3.jpg">
+                            <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-10.jpg">
                         </li>
                     </ul>
                 </div>
