add images to website

--- a/views/index.html
+++ b/views/index.html
@@ -80,7 +80,7 @@
                     <p>The Symposium aims to further the goals of Yale School of Management's PE/VC Club. By convening top professionals from the intersection of the private equity investing space with key stakeholders we aim to provide a forum for constructive and engaging dialogue about these industries.</p>
 
                     <figure>
-                        <img alt="" class="img-responsive" src="assets/images/about-us.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/about-us.jpeg">
                     </figure>
 
                 </div><!-- /.col-sm-6 -->
